- added mytplsadmin
- modified xoops_version.php for XoopsCube 2.1 compatible (change [] to [i])
- updated mymenu (for the compatibility with XoopsCube 2.1)
- addded locales/newzealand.php (thx zANavAShi)
- updated french (thx marco)
- updated tchinese (thx chia)
- added utf8-tw (thx chia)
- fixed a typo about operations of categories (thx dendeke) 0.85a
- added polish (thx kurak_bu) 0.85b

v.084b minor bug fixes (2005-12-1)
- updated locales/japan.php (thx hashimoto)
- fixed compatibility trouble with PHP 5.0.5 in the search function (thx hoso)
- fixed bug about making conditions for the list view (thx tohokuaiki)
- fixed bugs about `status` in plugins for mydownloads and mylinks

v.084a compatibility fix for PHP 4.4.x (2005-11-16)
- changed passing in reference to in value (thx okuhiki)
- fixed typo in a code for anti HTTP response splitting (thx okuhiki)

v.084 compatibility fix (2005-11-14)
- updated myblocksadmin 0.41 and mymenu 0.15
- modified the compatibilities with PHP5.0.5
- fixed some possibilities be attacked by HTTP Response Splitting
- removed CRs in some php files

v.083 bug fix & modify plugins-system (2005-9-9)
- modified the interface of Pulguin Manager
- fixed a duplicatated module can't alter the table by the updating module
- fixed some bug around "piCal plugin"
- added cid limitation into "piCal plugin" (set options like 1,2,4)
- added plugins
-- membership-birthday (thx sophistry)
-- hakusen-birthday

v.082 bug fixes (2005-9-1)
- fixed some bugs around PHP_SELF, SCRIPT_NAME etc.
- modified displaying as 12/24hour system in editing view
- updated german (thx Rene)

v.081 security update (2005-8-27)
- fixed PHP_SELF XSS
- added XOOPS 2.2 adaptation (minicalex, titles of blocks etc.)
- updated myblocksadmin into 0.40
- modified the theme compatibility with common's jscalendar
- added robots mode into minicalex for reducing mass crawling
- updated tchinese (thx Kikuchi)

v.080 release (2005-6-29)